# grug-tests

./: .gitignore  CMakeLists.txt  README.md  build.sh  cJSON.c  development.md  fuzz.c  fuzz.h  grammar.ebnf  grammar.py  grug_grammar.lark  grug_grammar.py  main.c  main.py  makefile  mod_api.h  mod_api.json  mod_api_schema.json  mod_api_schema.py  pyrightconfig.json  run.c  smoketest.c  tests.c  tests.h  tests.sh
.github/workflows/: build.yml  build_python.yml  build_win.yml  reusable-build.yml
tests/err/assignment_isnt_expression/: expected_error.txt  input-D.grug
tests/err/bool_cant_be_initialized_with_1/: expected_error.txt  input-D.grug
tests/err/bool_ge/: expected_error.txt  input-D.grug
tests/err/bool_gt/: expected_error.txt  input-D.grug
tests/err/bool_le/: expected_error.txt  input-D.grug
tests/err/bool_lt/: expected_error.txt  input-D.grug
tests/err/bool_unary_minus/: expected_error.txt  input-D.grug
tests/err/cant_add_strings/: expected_error.txt  input-D.grug
tests/err/cant_break_outside_of_loop/: expected_error.txt  input-D.grug
tests/err/cant_continue_outside_of_loop/: expected_error.txt  input-D.grug
tests/err/cant_declare_me_globally/: expected_error.txt  input-A.grug
tests/err/cant_declare_me_locally/: expected_error.txt  input-D.grug
tests/err/cant_declare_variable_in_fn_call/: expected_error.txt  input-D.grug
tests/err/cant_redefine_global/: expected_error.txt  input-D.grug
tests/err/comment_at_the_end_of_another_statement/: expected_error.txt  input-D.grug
tests/err/comment_empty/: expected_error.txt
tests/err/comment_lone_global_at_end/: expected_error.txt
tests/err/comment_unprintable_character/: expected_error.txt
tests/err/double_negation/: expected_error.txt  input-D.grug
tests/err/double_not/: expected_error.txt  input-D.grug
tests/err/else_on_next_line/: expected_error.txt  input-D.grug
tests/err/empty_file/: expected_error.txt
tests/err/empty_helper_fn/: expected_error.txt  input-D.grug
tests/err/empty_line_after_group/: expected_error.txt  input-D.grug
tests/err/empty_line_at_start_of_file/: expected_error.txt  input-D.grug
tests/err/empty_line_before_else/: expected_error.txt  input-D.grug
tests/err/empty_line_before_group/: expected_error.txt  input-D.grug
tests/err/empty_line_fn_group/: expected_error.txt  input-D.grug
tests/err/empty_line_twice_at_end_of_file/: expected_error.txt  input-D.grug
tests/err/empty_line_twice_between_local_statements/: expected_error.txt  input-D.grug
tests/err/empty_line_while_group/: expected_error.txt  input-D.grug
tests/err/empty_on_fn/: expected_error.txt  input-D.grug
tests/err/entity_cant_be_empty_string/: expected_error.txt  input-D.grug
tests/err/entity_cant_be_passed_to_helper_fn/: expected_error.txt  input-D.grug
tests/err/entity_cant_be_passed_to_helper_fn_2/: expected_error.txt  input-D.grug
tests/err/entity_has_invalid_entity_name_colon/: expected_error.txt  input-D.grug
tests/err/entity_has_invalid_entity_name_uppercase/: expected_error.txt  input-D.grug
tests/err/entity_has_invalid_mod_name_uppercase/: expected_error.txt  input-D.grug
tests/err/entity_mod_name_and_entity_name_is_missing/: expected_error.txt  input-D.grug
tests/err/entity_mod_name_cant_be_current_mod/: expected_error.txt  input-D.grug
tests/err/entity_mod_name_is_missing/: expected_error.txt  input-D.grug
tests/err/entity_name_is_missing/: expected_error.txt  input-D.grug
tests/err/entity_string_must_be_prefixed/: expected_error.txt  input-D.grug
tests/err/entity_type_for_helper_fn_return_type/: expected_error.txt  input-D.grug
tests/err/f32_missing_digit_after_decimal_point/: expected_error.txt  input-D.grug
tests/err/f32_too_big/: expected_error.txt  input-D.grug
tests/err/f32_too_close_to_zero_negative/: expected_error.txt  input-D.grug
tests/err/f32_too_close_to_zero_positive_1/: expected_error.txt  input-D.grug
tests/err/f32_too_close_to_zero_positive_2/: expected_error.txt  input-D.grug
tests/err/f32_too_small/: expected_error.txt  input-D.grug
tests/err/field_access_not_allowed/: expected_error.txt  input-D.grug
tests/err/file_name_entity_type_doesnt_start_uppercase/: expected_error.txt
tests/err/file_name_entity_type_invalid_character/: expected_error.txt
tests/err/file_name_missing_dash/: expected_error.txt
tests/err/file_name_missing_entity_type/: expected_error.txt
tests/err/file_name_missing_period/: expected_error.txt
tests/err/game_fn_call_gets_void/: expected_error.txt  input-D.grug
tests/err/game_fn_does_not_exist/: expected_error.txt  input-D.grug
tests/err/game_function_call_gets_wrong_arg_type/: expected_error.txt  input-D.grug
tests/err/game_function_call_less_args_expected/: expected_error.txt  input-D.grug
tests/err/game_function_call_more_args_expected/: expected_error.txt  input-D.grug
tests/err_mod_api/: class_must_be_json_object.json  classes_must_be_json_object.json  entities_must_be_json_object.json  entities_must_be_sorted.json  entity_must_be_json_object.json  game_fns_must_be_json_object.json  game_fns_must_be_sorted.json  methods_must_be_json_object.json  on_fns_must_be_json_array.json  on_fns_must_be_json_object.json  on_fns_must_be_sorted.json
tests/err_spaces/: add_expr_00-D.grug  add_expr_01-D.grug  add_expr_02-D.grug  add_expr_03-D.grug  and_expr_00-D.grug  and_expr_01-D.grug  atom_00-D.grug  atom_01-D.grug  atom_02-D.grug  atom_03-D.grug  block_00-D.grug  block_01-D.grug  block_02-D.grug  block_03-D.grug  block_04-D.grug  block_05-D.grug  break_00-D.grug  break_01-D.grug  call_expr_00-D.grug  call_expr_01-D.grug  call_expr_02-D.grug  call_expr_03-D.grug  call_expr_04-D.grug  call_expr_05-D.grug  call_stmt_00-D.grug  call_stmt_01-D.grug  call_stmt_02-D.grug  call_stmt_03-D.grug  call_stmt_04-D.grug  call_stmt_05-D.grug  call_stmt_06-D.grug  call_stmt_07-D.grug  compare_expr_00-D.grug  compare_expr_01-D.grug  compare_expr_02-D.grug  compare_expr_03-D.grug  compare_expr_04-D.grug  compare_expr_05-D.grug  compare_expr_06-D.grug  compare_expr_07-D.grug  (+72 more)
(+1268 files in other folders)
